basic/ingress/code-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nama-ingress
spec:
  rules:
    - host: sub.domain.com
      http:
        paths:
          - path: /path1
            backend:
              serviceName: nama-service1
              servicePort: port-service
          - path: /path2
            pathType: Prefix
            backend:
              service:
                name: nama-service2
                port:
                  number: 8080
