basic/ingress/ingress-domain.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingresses
spec:
  ingressClassName: nginx
  rules:
    - host: one.contoh.com
      http:
        paths:
          - backend:
              service:
                name: aks-helloworld-one
                port:
                  number: 80
            path: /(.*)
            pathType: Prefix
    - host: two.contoh.com
      http:
        paths:
          - backend:
              service:
                name: aks-helloworld-two
                port:
                  number: 80
            path: /(.*)
            pathType: Prefix
